@@ -1911,6 +1911,28 @@ return|return
 literal|null
 return|;
 block|}
+specifier|protected
+name|List
+argument_list|<
+name|FieldSchema
+argument_list|>
+name|getColumns
+parameter_list|(
+name|ASTNode
+name|ast
+parameter_list|)
+throws|throws
+name|SemanticException
+block|{
+return|return
+name|getColumns
+argument_list|(
+name|ast
+argument_list|,
+literal|true
+argument_list|)
+return|;
+block|}
 comment|/**    * Get the list of FieldSchema out of the ASTNode.    */
 specifier|protected
 name|List
@@ -1921,6 +1943,9 @@ name|getColumns
 parameter_list|(
 name|ASTNode
 name|ast
+parameter_list|,
+name|boolean
+name|lowerCase
 parameter_list|)
 throws|throws
 name|SemanticException
@@ -1981,13 +2006,9 @@ argument_list|(
 name|i
 argument_list|)
 decl_stmt|;
-comment|// child 0 is the name of the column
-name|col
-operator|.
-name|setName
-argument_list|(
-name|unescapeIdentifier
-argument_list|(
+name|String
+name|name
+init|=
 name|child
 operator|.
 name|getChild
@@ -1997,6 +2018,28 @@ argument_list|)
 operator|.
 name|getText
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|lowerCase
+condition|)
+block|{
+name|name
+operator|=
+name|name
+operator|.
+name|toLowerCase
+argument_list|()
+expr_stmt|;
+block|}
+comment|// child 0 is the name of the column
+name|col
+operator|.
+name|setName
+argument_list|(
+name|unescapeIdentifier
+argument_list|(
+name|name
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2139,6 +2182,9 @@ operator|.
 name|getText
 argument_list|()
 argument_list|)
+operator|.
+name|toLowerCase
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -2240,6 +2286,9 @@ operator|.
 name|getText
 argument_list|()
 argument_list|)
+operator|.
+name|toLowerCase
+argument_list|()
 argument_list|,
 name|HIVE_COLUMN_ORDER_ASC
 argument_list|)
@@ -2267,6 +2316,9 @@ operator|.
 name|getText
 argument_list|()
 argument_list|)
+operator|.
+name|toLowerCase
+argument_list|()
 argument_list|,
 name|HIVE_COLUMN_ORDER_DESC
 argument_list|)
