@@ -38389,6 +38389,8 @@ name|getChild
 argument_list|(
 literal|0
 argument_list|)
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 break|break;
